i can get geoname data

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Sentiment Analysis</title>
+  <title>Travel App</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -17,16 +17,28 @@
   <main class="mt-5">
     <div class="container p-5 bg-light">
       <section>
-        <form class="needs-validation" novalidate>
-          <div class="mb-3">
+        <form class="row g-3 needs-validation" novalidate>
+          <div class="form-floating">
+            <input name="country" type="text" class="form-control" placeholder="Country">
+            <label for="floatingInput">Country</label>
+          </div>
+          <div class="form-floating">
+            <input name="location" type="text" class="form-control" placeholder="Location">
+            <label for="floatingInput">Location</label>
+          </div>
+          <!-- <div class="mb-3">
             <label class="form-label">Could you plz write your feeling now.</label>
             <input type="text" class="form-control" id="txt" required />
             <div class="invalid-feedback">
               Please input any and you can input only English of alphabet.
             </div>
             <div class="valid-feedback">OK</div>
+          </div> -->
+          <div class="form-floating">
+            <input name="departure" type="date" class="form-control" placeholder="Departure">
+            <label for="floatingInput">Departure</label>
           </div>
-          <div class="mb-3">
+          <div class="form-floating">
             <button class="btn btn-primary" type="submit">Submit</button>
           </div>
         </form>
