国・都市をサジェストで選択できるようにし、APIの結果を取得できるようにした

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -39,7 +39,7 @@
             <label for="floatingInput">Departure</label>
           </div>
           <div class="form-floating">
-            <button id="btn" class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" type="button">Submit</button>
           </div>
         </form>
       </section>
