--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main class="mt-3 container">
-    <div class="p-5 bg-light">
+    <div class="p-3 bg-light">
       <section>
         <form class="row g-3 needs-validation" autocomplete="off" novalidate>
           <div class="col-md-6 form-floating">
@@ -42,9 +42,24 @@
       </section>
     </div>
 
-    <section class="text-center">
+    <section class="text-center mt-3">
       <h1>Your Trip Location Info</h1>
-      <figure id="location-img"></figure>
+
+    </section>
+
+    <section class="d-flex flex-column justify-content-center align-items-center">
+      <div class="card w-75">
+        <div class="card-header">
+          You input departure date within a week, we tell you "Current Weather Forecast"
+        </div>
+        <div class="card-body">
+          <figure id="location-img"></figure>
+          <h4 id="location-title" class="card-title"></h4>
+          <img id="curr-img" class="card-img-top w-25" alt="current weather">
+          <h5 class="card-title">Current Weather Forecast</h5>
+          <p id="curr-forc" class="card-text"></p>
+        </div>
+      </div>
     </section>
   </main>
 
