cardコンポーネントに現在の天気・16日間予報天気の両方が表示されるようにした

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
 .h-100 {
-    min-height: 100vh;
+  min-height: 100vh;
+}
+
+.display-none {
+  display: none;
 }
