--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -47,19 +47,83 @@
 
     </section>
 
-    <section class="d-flex flex-column justify-content-center align-items-center">
-      <div class="card w-75">
+    <section>
+      <div id="current-weather" class="card display-none">
         <div class="card-header">
-          You input departure date within a week, we tell you "Current Weather Forecast"
+          The departure date you input is within a week, we tell you "Current Weather Forecast"
         </div>
         <div class="card-body">
-          <figure id="location-img"></figure>
-          <h4 id="location-title" class="card-title"></h4>
-          <img id="curr-img" class="card-img-top w-25" alt="current weather">
-          <h5 class="card-title">Current Weather Forecast</h5>
-          <p id="curr-forc" class="card-text"></p>
+          <h4 class="card-title location-title"></h4>
+          <figure class="location-img"></figure>
+          <h4 class="card-title">Current Weather Forecast(today forecast)</h4>
+          <table class="table text-center">
+            <thead>
+              <tr>
+                <th scope="col">Date</th>
+                <th scope="col">Weather</th>
+                <th scope="col">Description</th>
+                <th scope="col">Max temp</th>
+                <th scope="col">Min temp</th>
+                <th scope="col">Rainy percent</th>
+              </tr>
+            </thead>
+            <tbody class="weather-data"></tbody>
+          </table>
         </div>
       </div>
+      </div>
+    </section>
+
+    <section>
+      <div id="forecast-weather" class="card display-none">
+        <div class="card-header">
+          The departure date you input is 1 week later, we tell you "Forecast Weather"
+        </div>
+        <div class="card-body">
+          <h4 class="card-title location-title"></h4>
+          <figure class="location-img"></figure>
+          <h4 class="card-title">Forecast Weather(7-day forecast)</h4>
+          <table class="table text-center">
+            <thead>
+              <tr>
+                <th scope="col">Date</th>
+                <th scope="col">Weather</th>
+                <th scope="col">Description</th>
+                <th scope="col">Max temp</th>
+                <th scope="col">Min temp</th>
+                <th scope="col">Rainy percent</th>
+              </tr>
+            </thead>
+            <tbody class="weather-data"></tbody>
+          </table>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <!-- 以下はフォーマット -->
+    <section class="display-none">
+      <table id="dumy-table" class="table">
+        <thead>
+          <tr>
+            <th scope="col">date</th>
+            <th scope="col">Weather</th>
+            <th scope="col">description</th>
+            <th scope="col">max temp</th>
+            <th scope="col">min temp</th>
+          </tr>
+        </thead>
+        <tbody class="weather-data">
+          <tr id="repeat-content">
+            <td class="valid-date"></td>
+            <td><img class="card-img-top w-25 weather-icon" alt="forecast weather"></td>
+            <td class="description"></td>
+            <td class="max-temp"></td>
+            <td class="min-temp"></td>
+            <td class="rainy-percent"></td>]
+          </tr>
+        </tbody>
+      </table>
     </section>
   </main>
 
