検索中はLoadingが表示されるようにした

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -36,7 +36,11 @@
             <label for="floatingInput">Departure</label>
           </div>
           <div class="form-floating">
-            <button class="btn btn-primary" type="button">Submit</button>
+            <button id="submit-btn" class="btn btn-primary" type="button">Submit</button>
+            <button id="loading-btn" class="btn btn-primary display-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
           </div>
         </form>
       </section>
