update README(translate in English)

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -39,7 +39,7 @@
             <button id="submit-btn" class="btn btn-primary" type="button">Submit</button>
             <button id="loading-btn" class="btn btn-primary display-none" type="button" disabled>
               <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-              Loading...
+              Submiting...
             </button>
           </div>
         </form>
