--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Travel App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -11,7 +12,7 @@
     <h1>Trip App!</h1>
   </header>
 
-  <main class="mt-3 container">
+  <main class="mt-3 container-sm">
     <div class="p-3 bg-light">
       <section>
         <form class="row g-3 needs-validation" autocomplete="off" novalidate>
@@ -50,7 +51,7 @@
       <h1>Your Trip Location Info</h1>
     </section>
 
-    <section id="trip-list"></section>
+    <section id="trip-list" class="row row-cols-3"></section>
 
     <!-- 以下はフォーマット -->
     <section class="display-none">
@@ -66,19 +67,21 @@
           <p class="case-of-current display-none">
             ※in the case of "Current Weather Forecast", max/min temp and Rainy percent are displayed as "ー".
           </p>
-          <table class="table text-center">
-            <thead>
-              <tr>
-                <th scope="col">date</th>
-                <th scope="col">Weather</th>
-                <th scope="col">description</th>
-                <th scope="col">max temp</th>
-                <th scope="col">min temp</th>
-                <th scope="col">Rainy percent</th>
-              </tr>
-            </thead>
-            <tbody class="weather-data"></tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table text-center">
+              <thead>
+                <tr>
+                  <th scope="col">date</th>
+                  <th scope="col">Weather</th>
+                  <th scope="col">description</th>
+                  <th scope="col">max temp</th>
+                  <th scope="col">min temp</th>
+                  <th scope="col">Rainy percent</th>
+                </tr>
+              </thead>
+              <tbody class="weather-data"></tbody>
+            </table>
+          </div>
         </div>
       </div>
     </section>
