--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -32,9 +32,13 @@
             </div>
             <div class="valid-feedback">OK</div>
           </div> -->
-          <div class="form-floating">
+          <div class="col-md-6 form-floating">
             <input name="departure" type="date" class="form-control" placeholder="Departure">
             <label for="floatingInput">Departure</label>
+          </div>
+          <div class="col-md-6 form-floating">
+            <input name="end-date" type="date" class="form-control" placeholder="End date">
+            <label for="floatingInput">End date</label>
           </div>
           <div class="form-floating">
             <button id="submit-btn" class="btn btn-primary" type="button">Submit</button>
@@ -63,6 +67,8 @@
           </div>
           <h4 class="card-title location-title"></h4>
           <figure class="location-img"></figure>
+          <h4 class="card-title">Length of trip</h4>
+          <p class="trip-length"></p>
           <h4 class="card-title">Current Weather Forecast(today forecast)</h4>
           <p class="case-of-current display-none">
             ※in the case of "Current Weather Forecast", max/min temp and Rainy percent are displayed as "ー".
