fix weather icon size

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -97,7 +97,7 @@
         <tbody>
           <tr id="repeat-content">
             <td class="valid-date"></td>
-            <td><img class="card-img-top w-25 weather-icon" alt="forecast weather"></td>
+            <td><img class="card-img-top weather-icon" alt="forecast weather"></td>
             <td class="description"></td>
             <td class="max-temp"></td>
             <td class="min-temp"></td>
