--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,121 +1,159 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8" />
+		<title>Travel App</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+	</head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Travel App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+	<body class="d-flex flex-column h-100">
+		<header class="container mt-3">
+			<h1>Trip App!</h1>
+		</header>
 
-<body class="d-flex flex-column h-100">
-  <header class="container mt-3">
-    <h1>Trip App!</h1>
-  </header>
+		<main class="mt-3 container-sm">
+			<div class="p-3 bg-light">
+				<section>
+					<form class="row g-3 needs-validation" autocomplete="off" novalidate>
+						<div class="col-md-6 form-floating">
+							<input
+								name="country"
+								type="text"
+								class="form-control"
+								placeholder="Country"
+							/>
+							<label for="floatingInput">Country</label>
+						</div>
+						<div class="col-md-6 form-floating">
+							<input
+								name="location"
+								type="text"
+								class="form-control"
+								placeholder="Location"
+							/>
+							<label for="floatingInput">Location</label>
+						</div>
+						<div class="col-md-6 form-floating">
+							<input
+								name="departure"
+								type="date"
+								class="form-control"
+								placeholder="Departure"
+							/>
+							<label for="floatingInput">Departure</label>
+						</div>
+						<div class="col-md-6 form-floating">
+							<input
+								name="end-date"
+								type="date"
+								class="form-control"
+								placeholder="End date"
+							/>
+							<label for="floatingInput">End date</label>
+						</div>
+						<div class="form-floating">
+							<button id="submit-btn" class="btn btn-primary" type="button">
+								Submit
+							</button>
+							<button
+								id="loading-btn"
+								class="btn btn-primary display-none"
+								type="button"
+								disabled
+							>
+								<span
+									class="spinner-border spinner-border-sm"
+									role="status"
+									aria-hidden="true"
+								></span>
+								Submiting...
+							</button>
+						</div>
+					</form>
+				</section>
+			</div>
 
-  <main class="mt-3 container-sm">
-    <div class="p-3 bg-light">
-      <section>
-        <form class="row g-3 needs-validation" autocomplete="off" novalidate>
-          <div class="col-md-6 form-floating">
-            <input name="country" type="text" class="form-control" placeholder="Country">
-            <label for="floatingInput">Country</label>
-          </div>
-          <div class="col-md-6 form-floating">
-            <input name="location" type="text" class="form-control" placeholder="Location">
-            <label for="floatingInput">Location</label>
-          </div>
-          <div class="col-md-6 form-floating">
-            <input name="departure" type="date" class="form-control" placeholder="Departure">
-            <label for="floatingInput">Departure</label>
-          </div>
-          <div class="col-md-6 form-floating">
-            <input name="end-date" type="date" class="form-control" placeholder="End date">
-            <label for="floatingInput">End date</label>
-          </div>
-          <div class="form-floating">
-            <button id="submit-btn" class="btn btn-primary" type="button">Submit</button>
-            <button id="loading-btn" class="btn btn-primary display-none" type="button" disabled>
-              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-              Submiting...
-            </button>
-          </div>
-        </form>
-      </section>
-    </div>
+			<section class="text-center mt-3">
+				<h1>Your Trip Location Info</h1>
+			</section>
 
-    <section class="text-center mt-3">
-      <h1>Your Trip Location Info</h1>
-    </section>
+			<section id="trip-list" class="row row-cols-3"></section>
 
-    <section id="trip-list" class="row row-cols-3"></section>
+			<!-- 以下はフォーマット -->
+			<section class="display-none">
+				<div id="formate" class="card">
+					<div class="card-header"></div>
+					<div class="card-body">
+						<div class="alert alert-warning display-none" role="alert">
+							Since the image could not be obtained by the city name, the image
+							of the country is displayed.
+						</div>
+						<h4 class="card-title location-title"></h4>
+						<figure class="location-img"></figure>
+						<h4 class="card-title">Length of trip</h4>
+						<p class="trip-length"></p>
+						<h4 class="card-title">Current Weather Forecast(today forecast)</h4>
+						<p class="case-of-current display-none">
+							※in the case of "Current Weather Forecast", max/min temp and Rainy
+							percent are displayed as "ー".
+						</p>
+						<div class="table-responsive">
+							<table class="table text-center">
+								<thead>
+									<tr>
+										<th scope="col">date</th>
+										<th scope="col">Weather</th>
+										<th scope="col">description</th>
+										<th scope="col">max temp</th>
+										<th scope="col">min temp</th>
+										<th scope="col">Rainy percent</th>
+									</tr>
+								</thead>
+								<tbody class="weather-data"></tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</section>
 
-    <!-- 以下はフォーマット -->
-    <section class="display-none">
-      <div id="formate" class="card">
-        <div class="card-header"></div>
-        <div class="card-body">
-          <div class="alert alert-warning display-none" role="alert">
-            Since the image could not be obtained by the city name, the image of the country is displayed.
-          </div>
-          <h4 class="card-title location-title"></h4>
-          <figure class="location-img"></figure>
-          <h4 class="card-title">Length of trip</h4>
-          <p class="trip-length"></p>
-          <h4 class="card-title">Current Weather Forecast(today forecast)</h4>
-          <p class="case-of-current display-none">
-            ※in the case of "Current Weather Forecast", max/min temp and Rainy percent are displayed as "ー".
-          </p>
-          <div class="table-responsive">
-            <table class="table text-center">
-              <thead>
-                <tr>
-                  <th scope="col">date</th>
-                  <th scope="col">Weather</th>
-                  <th scope="col">description</th>
-                  <th scope="col">max temp</th>
-                  <th scope="col">min temp</th>
-                  <th scope="col">Rainy percent</th>
-                </tr>
-              </thead>
-              <tbody class="weather-data"></tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </section>
+			<section class="display-none">
+				<table>
+					<tbody>
+						<tr id="repeat-content">
+							<td class="valid-date"></td>
+							<td>
+								<img class="card-img-top weather-icon" alt="forecast weather" />
+							</td>
+							<td class="description"></td>
+							<td class="max-temp"></td>
+							<td class="min-temp"></td>
+							<td class="rainy-percent"></td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+		</main>
 
-    <section class="display-none">
-      <table>
-        <tbody>
-          <tr id="repeat-content">
-            <td class="valid-date"></td>
-            <td><img class="card-img-top weather-icon" alt="forecast weather"></td>
-            <td class="description"></td>
-            <td class="max-temp"></td>
-            <td class="min-temp"></td>
-            <td class="rainy-percent"></td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-  </main>
+		<footer class="footer mt-auto py-3 bg-light">
+			<div class="container">
+				<span class="text-muted"
+					>powered by <a href="https://getbootstrap.com/">bootstrap</a> and
+					<a
+						href="https://www.meaningcloud.com/developer/sentiment-analysis/doc/2.1"
+						>meaningcloud.com</a
+					></span
+				>
+			</div>
+		</footer>
 
-  <footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-      <span class="text-muted">powered by <a href="https://getbootstrap.com/">bootstrap</a> and
-        <a href="https://www.meaningcloud.com/developer/sentiment-analysis/doc/2.1">meaningcloud.com</a></span>
-    </div>
-  </footer>
-
-  <script>
-    // Check that service workers are supported
-    // if ("serviceWorker" in navigator) {
-    //   // Use the window load event to keep the page load performant
-    //   window.addEventListener("load", () => {
-    //     navigator.serviceWorker.register("/service-worker.js");
-    //   });
-    // }
-  </script>
-</body>
-
+		<script>
+			// Check that service workers are supported
+			// if ("serviceWorker" in navigator) {
+			//   // Use the window load event to keep the page load performant
+			//   window.addEventListener("load", () => {
+			//     navigator.serviceWorker.register("/service-worker.js");
+			//   });
+			// }
+		</script>
+	</body>
 </html>
